<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/menu_statistics" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_get_help"
            android:icon="@drawable/ic_get_help"
            android:title="@string/menu_get_help" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>