<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="group_project.main.emotionalspectrum.ui.home."
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="group_project.main.emotionalspectrum.ui.settings."
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="group_project.main.emotionalspectrum.ui.statistics."
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
    <activity
        android:id="@+id/nav_get_help"
        android:name="group_project.main.emotionalspectrum.ui.get_help.Get_HelpActivity"
        android:label="@string/menu_get_help"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="group_project.main.emotionalspectrum.ui.contact_us."
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_exit"
        android:name="group_project.main.emotionalspectrum.ui.exit."
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_statistics" />
</navigation>