<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/main_text"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cambo"
        android:gravity="top"
        android:text="@string/main_text"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/spectrum"
        android:layout_width="match_parent"
        android:layout_height="380sp"
        android:clickable="false"
        android:contentDescription="@string/spectrum"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:srcCompat="@drawable/round" />


    <ImageView
        android:id="@+id/spectrum1"
        android:layout_width="match_parent"
        android:layout_height="380sp"
        android:clickable="true"
        android:contentDescription="@string/spectrum"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:srcCompat="@drawable/round_without_emots" />


    <FrameLayout
        android:id="@+id/place_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="120sp"
        tools:layout_editor_absoluteX="0sp"
        tools:layout_editor_absoluteY="-127sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/spectrum"
        app:layout_constraintTop_toBottomOf="@+id/spectrum"
        >
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="@font/cambo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/spectrum"
            app:layout_constraintTop_toBottomOf="@+id/spectrum"
            />
    </ScrollView>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="statsClick"
        android:text="@string/button_text"
        />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="settingsClick"
        android:text="@string/button_setting"
        />

</androidx.constraintlayout.widget.ConstraintLayout>